# alephzero-chess

./: README.md
backend/: .gitignore  Cargo.toml
backend/src/: ai.rs  board.rs  board_provider.rs  board_serializer.rs  db.rs  error.rs  lib.rs  main.rs  moves.rs  pawn_rank.rs  piece.rs  piece_grammar.lalrprop  piece_rank.rs  piece_rules.rs  piece_serializer.rs  server.rs
backend/static/: index.html  script.js  style.css
docs/: CNAME  index.html  script.js  style.css
docs/a3qz/: CNAME  index.html  script.js  style.css
docs/a3qz_2/: script.js  style.css
docs/ai/: script.js  style.css
docs/pkg/: backend.d.ts  backend.js  backend_bg.wasm  backend_bg.wasm.d.ts  package.json
