[package]
name = "backend"
version = "0.1.0"
authors = ["John Westhoff <johnjwesthoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.0"
[dependencies.num-traits]
version = "0.2.11"
default-features = false
features = ["i128"]
