[package]
name = "backend"
version = "0.1.0"
authors = ["John Westhoff <johnjwesthoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[[bin]]
required-features = ["server"]
path = "./src/server.rs"
name = "server"

[dependencies]
async-std = "1.10.0"
num-bigint = "0.4.0"
actix-web = { version = "3", optional = true }
rusqlite = { version = "0.24.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
actix-files = { version = "0.5.0", optional = true }
wasm-bindgen = "0.2.78"
[dependencies.num-traits]
version = "0.2.11"
default-features = false
features = ["i128"]


[features]
server = ["actix-web", "rusqlite", "actix-files"]